# firefox-mobile

./: .taskcluster.yml  Cargo.toml  configure.py  stylelint-rollouts.config.js
.cargo/: config.toml.in
.claude/: settings.json
.github/workflows/: compile-on-change.yml  wowshafox-mobile-apk.yml
accessible/base/: CacheConstants.h  nsAccessibilityService.cpp
accessible/basetypes/: Accessible.h
accessible/docs/: HCMMediaQueries.md
accessible/generic/: DocAccessible.cpp  DocAccessible.h  LocalAccessible.cpp  LocalAccessible.h
accessible/ipc/: DocAccessibleChild.cpp  DocAccessibleChild.h  RemoteAccessible.cpp
accessible/mac/: mozAccessible.mm
browser/app/: moz.build
browser/components/: BrowserComponents.manifest  DesktopActorRegistry.sys.mjs
browser/installer/: package-manifest.in
browser/locales/: l10n-changesets.json
browser/locales-preview/: aiWindow.ftl  aiWindowContent.ftl  ipProtection.ftl
config/makefiles/: rust.mk
devtools/client/: jar.mn
docshell/base/: CanonicalBrowsingContext.cpp  CanonicalBrowsingContext.h  nsDocShell.cpp
docshell/shistory/: nsSHistory.cpp
gradle/: libs.versions.toml
image/: SourceBuffer.cpp  SourceBuffer.h
mfbt/: Maybe.h
taskcluster/: config.yml  mach_commands.py  requirements.in  requirements.txt
testing/: mach_commands.py
toolkit/: moz.configure
toolkit/components/content-classifier/content_classifier_engine/: Cargo.toml  ContentClassifierEngine.cpp  ContentClassifierEngine.h  cbindgen.toml  moz.build
toolkit/components/content-classifier/content_classifier_engine/src/: lib.rs
(+1058 files in other folders)
