[package]
name = "content_classifier_engine"
version = "0.0.1"
edition = "2021"
authors = ["Tim Huang <tihuang@mozilla.com>", "Benjamin VanderSloot <bvandersloot@mozilla.com>"]
license = "MPL-2.0"

[dependencies]
adblock = { version = "0.12.1", features = ["full-regex-handling", "single-thread"], default-features = false }
cstr = "0.2"
nsstring = { path = "../../../../xpcom/rust/nsstring" }
nserror = { path = "../../../../xpcom/rust/nserror" }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
xpcom = { path = "../../../../xpcom/rust/xpcom" }
